--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test:mocha": "mocha  --recursive",
     "test:unit": "mocha test/unit",
     "test:e2e": "mocha test/e2e",
-    "test:watch": "nodemon --exec 'npm run test:mocha'",
-    "test:e2e:watch": "nodemon --exec 'npm run test:e2e'",
-    "test:unit:watch": "nodemon --exec 'npm run test:unit'"
+    "test:watch": "nodemon --exec npm run test:mocha",
+    "test:e2e:watch": "nodemon --exec npm run test:e2e",
+    "test:unit:watch": "nodemon --exec npm run test:unit"
   },
   "repository": {
     "type": "git",
